Added JS for menu toggle

--- a/src/style.css
+++ b/src/style.css
@@ -96,7 +96,7 @@ i.fa-times {
   position: fixed;
   top: 0;
   transition: transform 0.5s;
-  /*transform: translateX(-100%);*/
+  transform: translateX(-100%);
   width: 80%;
   z-index: 1250;
 }
