--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,11 @@ p {
 
 /* Header */
 header {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.75),
+    transparent
+  );
   left: 0;
   position: absolute;
   top: 0;
@@ -151,3 +155,107 @@ i.fa-times {
 }
 
 /* Hero */
+.hero {
+  align-items: center;
+  background: url("img/hero.jpeg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  height: 100vh;
+  text-align: center;
+  width: 100%;
+}
+
+.sub-header {
+  color: #ffffff;
+  font-size: 8.5rem;
+  font-family: "Cabin Sketch", cursive;
+  letter-spacing: 2px;
+  line-height: 1;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.75);
+}
+
+.first-letter {
+  font-size: 10rem;
+  text-transform: uppercase;
+}
+
+.headline {
+  color: #ffffff;
+  font-family: var(--main-font);
+  font-size: 3rem;
+  letter-spacing: 1rem;
+  margin-right: -1rem;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.75);
+  text-transform: uppercase;
+}
+
+.separate {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.line {
+  background-color: #ffffff;
+  height: 0.25rem;
+  max-width: 8.5rem;
+  position: relative;
+  width: 100%;
+}
+
+.line-right::before,
+.line-left::before {
+  border: 0.5 solid transparent;
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.line-right::before {
+  border-right-color: #ffffff;
+  right: 0;
+}
+
+.line-left::before {
+  border-left-color: #ffffff;
+  left: 0;
+}
+
+.asterisk {
+  color: var(--secondary-font-color);
+  font-size: 1.5rem;
+  margin: 0 1.5rem;
+}
+
+.headline-description {
+  color: #ffffff;
+  font-size: 1.5rem;
+  font-weight: 100;
+  letter-spacing: 3px;
+  margin-bottom: 1.5rem;
+  margin-right: -3px;
+  text-transform: uppercase;
+}
+
+.btn {
+  display: inline-block;
+  letter-spacing: 2px;
+  margin-right: -2px;
+  padding: 1rem 2rem;
+  text-transform: uppercase;
+}
+
+.cta-btn {
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  color: var(--main-font-color-dark);
+  font-size: 1.5rem;
+  transition: background-color 0.5s;
+}
+
+.cta-btn:hover,
+.cta-btn:focus {
+  background-color: var(--main-font-color-dark);
+  color: #ffffff;
+}
