finished styling first section (info)

--- a/src/style.css
+++ b/src/style.css
@@ -171,7 +171,6 @@ i.fa-times {
   font-family: "Cabin Sketch", cursive;
   letter-spacing: 2px;
   line-height: 1;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.75);
 }
 
 .first-letter {
@@ -185,7 +184,6 @@ i.fa-times {
   font-size: 3rem;
   letter-spacing: 1rem;
   margin-right: -1rem;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.75);
   text-transform: uppercase;
 }
 
@@ -199,6 +197,7 @@ i.fa-times {
   background-color: #ffffff;
   height: 0.25rem;
   max-width: 8.5rem;
+  margin: 3rem;
   position: relative;
   width: 100%;
 }
@@ -259,3 +258,72 @@ i.fa-times {
   background-color: var(--main-font-color-dark);
   color: #ffffff;
 }
+
+/*First Section */
+.global-headline {
+  margin-top: 4rem;
+  text-align: center;
+}
+
+.gt-info .global-headline {
+  margin-top: 7rem;
+}
+
+.global-headline .asterisk {
+  color: var(--body-font-color);
+  margin: 2.5rem 0;
+}
+
+.headline-dark {
+  color: var(--body-font-color);
+  letter-spacing: 0.5rem;
+  margin-right: -0.5rem;
+}
+
+.global-headline .sub-header {
+  letter-spacing: -0.5rem;
+  line-height: 1;
+}
+
+.gt-info {
+  text-align: center;
+}
+
+.gt-description {
+  margin-bottom: 3rem;
+}
+
+.gt-description p {
+  line-height: 2;
+  margin-bottom: 2.5rem;
+}
+
+.body-btn {
+  color: var(--secondary-font-color);
+  font-size: 2rem;
+  position: relative;
+  transition: color 0.5s;
+}
+
+.body-btn::before {
+  background-color: var(--secondary-font-color);
+  bottom: -3px;
+  content: "";
+  height: 2px;
+  left: 0;
+  position: absolute;
+  transition: color 0.5s;
+  width: 100%;
+}
+
+.body-btn:hover,
+.body-btn:focus {
+  color: var(--main-font-color-dark);
+}
+
+.body-btn:hover::before,
+.body-btn:focus::before {
+  background-color: var(--main-font-color-dark);
+}
+
+/* Tips */
