--- a/src/style.css
+++ b/src/style.css
@@ -356,4 +356,101 @@ i.fa-times {
   background-size: cover;
 }
 
-/* Final section */
+/* Footer */
+
+footer {
+  background-color: #121212;
+  color: #ffffff;
+  padding: 8rem 0;
+  position: relative;
+  text-align: center;
+}
+
+.to-top {
+  background-color: #121212;
+  border-radius: 50%;
+  height: 7rem;
+  left: 50%;
+  position: absolute;
+  top: -3rem;
+  transform: translateX(-50%);
+  width: 7rem;
+}
+
+.to-top i {
+  color: #ffffff;
+  display: block;
+  font-size: 2rem;
+  padding: 2rem;
+}
+
+.footer-content {
+  /*overflow: hidden;*/
+}
+
+.footer-content h4 {
+  font-size: 2rem;
+  font-weight: 100;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+}
+
+.footer-content .asterisk {
+  margin: 2.5rem 0;
+}
+
+.footer-content-about {
+  margin-bottom: 5.5rem;
+}
+
+.footer-content-about p {
+  line-height: 2;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin-bottom: 5.5rem;
+}
+
+.social-icons i {
+  color: #ffffff;
+  font-size: 2rem;
+  opacity: 0.5;
+  padding: 1rem 2rem;
+  transition: color 0.5s;
+}
+
+.social-icons i:hover,
+.social-icons i:focus {
+  color: var(--secondary-font-color);
+}
+
+.newsletter-form {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  width: 100%;
+}
+
+.newsletter-input {
+  border-radius: 0.5rem;
+  max-width: 25rem;
+  padding: 1rem;
+  width: 100%;
+}
+
+.newletter-btn {
+  background-color: transparent;
+  border: none;
+  color: var(--main-font-color-dark);
+  cursor: pointer;
+  font-size: 1.5rem;
+  margin-left: 11rem;
+  padding: 1px 0.5rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
