--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,8 @@ section {
 }
 
 img {
-  max-width: 100%;
+  border-radius: 5rem;
+  flex: 1;
   width: 100%;
 }
 
@@ -175,6 +176,7 @@ i.fa-times {
 
 .big-bg {
   background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 5rem;
   max-width: 100%;
   padding: 5rem;
   width: 100%;
@@ -320,6 +322,7 @@ h1.headline {
 .body-btn {
   color: var(--secondary-font-color);
   font-size: 2rem;
+  margin: 2rem;
   position: relative;
   transition: color 0.5s;
 }
@@ -534,7 +537,7 @@ footer {
   }
 
   .first-letter {
-    font-size: 12rem;
+    font-size: 10rem;
   }
 
   .headline {
@@ -558,6 +561,7 @@ footer {
   }
 
   img {
+    border-radius: 5rem;
     flex: 1;
     width: 100%;
   }
@@ -584,7 +588,7 @@ footer {
   .socials,
   .newsletter-form {
     margin: 0 1rem;
-    max-width: 27rem;
+    max-width: 30rem;
     width: 100%;
   }
 
@@ -593,6 +597,6 @@ footer {
   }
 
   .newsletter-btn {
-    margin-left: 7.5rem;
+    padding: 2rem;
   }
 }
