--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 section {
   padding: 4rem 0;
 }
@@ -167,11 +171,14 @@ i.fa-times {
 }
 
 .big {
+  animation: fadeUp 0.5s forwards;
+  animation-delay: 1s;
   color: #000000;
   font-size: 8.5rem;
   font-family: "Cabin Sketch", cursive;
   letter-spacing: 2px;
   line-height: 1;
+  opacity: 0;
 }
 
 .big-bg {
@@ -204,12 +211,19 @@ i.fa-times {
 }
 
 h1.headline {
+  animation: scale 1.5s forwards;
   color: var(--main-font-color-dark);
   font-family: var(--main-font);
   font-size: 1.5rem;
   letter-spacing: 1rem;
   margin-right: -1rem;
   text-transform: uppercase;
+}
+
+.single-animation {
+  animation: fadeDown 0.5s forwards;
+  animation-delay: 1.5s;
+  opacity: 0;
 }
 
 .separate {
@@ -219,37 +233,24 @@ h1.headline {
 }
 
 .line {
-  background-color: #ffffff;
+  animation: grow 3s forwards;
+  animation-delay: 1s;
+  background-color: rgba(0, 0, 0, 0.9);
   height: 0.25rem;
   max-width: 8.5rem;
   margin: 3rem;
+  opacity: 0;
   position: relative;
   width: 100%;
 }
 
-.line-right::before,
-.line-left::before {
-  border: 0.5 solid transparent;
-  content: "";
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.line-right::before {
-  border-right-color: #ffffff;
-  right: 0;
-}
-
-.line-left::before {
-  border-left-color: #ffffff;
-  left: 0;
-}
-
 .asterisk {
+  animation: spin 3s forwards;
+  animation-delay: 1s;
   color: var(--secondary-font-color);
   font-size: 1.5rem;
   margin: 0 1.5rem;
+  opacity: 0;
 }
 
 .headline-description {
@@ -400,6 +401,7 @@ footer {
 }
 
 .to-top i {
+  animation: up 4s infinite;
   color: #ffffff;
   display: block;
   font-size: 2rem;
@@ -566,10 +568,6 @@ footer {
     width: 100%;
   }
 
-  /*.padding-right {
-    padding-right: 7rem;
-  }*/
-
   .footer-content {
     margin: auto;
     max-width: 75rem;
@@ -598,5 +596,69 @@ footer {
 
   .newsletter-btn {
     padding: 2rem;
+  }
+}
+
+/*Animation*/
+@keyframes fadeUp {
+  0% {
+    transform: translateY(4rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(2);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes grow {
+  0% {
+    width: 0;
+  }
+  100% {
+    opacity: 1;
+    width: 100%;
+  }
+}
+
+@keyframes fadeDown {
+  0% {
+    transform: translateY(-1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    opacity: 1;
+    transform: rotate(-360deg);
+  }
+}
+
+@keyframes up {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-1rem);
   }
 }
